docs: Add samples for using timestamps with BQStorage Read and Write API